Fixed vertical-align error

--- a/style.css
+++ b/style.css
@@ -54,3 +54,8 @@ span {
 #avbo {
   width: 50%;
 }
+
+#av {
+  text-align: center;
+  vertical-align: middle;
+}
